name:                monad-transformers-example
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/laser/monad-transformers-example#readme
license:             BSD3
license-file:        LICENSE
author:              Erin Swenson-Healey
maintainer:          eswenson-healey@cj.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable monad-transformers-example
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , either
                     , transformers
